[tool.poetry]
name = "pmc-crawler"
version = "0.1.0"
description = "PMC Citation Crawler, implemented as a notebook"
authors = ["DBMI Software Engineering <cuhealthai-softwareengineering@cuanschutz.edu>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.4.2"
papermill = "^2.3.4"
pywin32 = {version = "304", platform = "windows"}
prefect = {extras = ["all"], version = "^2.0.0"}
jupyter = "^1.0.0"
scrapbook = {extras = ["all"], version = "^0.5.0"}
PyNaCl = "^1.5.0"
python-dotenv = {extras = ["cli"], version = "^0.20.0"}
smartsheet-python-sdk = "^2.177.1"
docxtpl = "^0.16.0"
matplotlib = "^3.5.2"
jsonschema = "^4.6.0"
manubot = "^0.5.5"
citeproc-py = "^0.6.0"
ratelimit = "^2.2.1"
python-slugify = "^6.1.2"
tqdm = "^4.64.1"
jupyterlab = "^3.5.3"
requests-cache = "^0.9.8"
jupyterlab-execute-time = "^2.3.1"
openpyxl = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
vulture = "^2.5"
bandit = "^1.7.4"
safety = "^2.1.1"
mypy = {extras = ["jupyter"], version = "^0.971"}
nbqa = "^1.3.1"
nbconvert = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
